# yield-lag-bot

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  lead_lag_report.csv  pyproject.toml  ticks.csv
config/: settings.example.yaml
docker/: Dockerfile  docker-compose.yml
docs/: CODEX_YIELD_LAG_PIVOT.md
examples/: cme_sample.csv  hyperliquid_bbo_sample.csv
examples/events/: central_bank_events.example.yaml
examples/experiments/: macro_windows.example.yaml
migrations/: env.py
migrations/versions/: 20260520_0001_initial_schema.py
scripts/windows/: README.md  archive_last_hour.ps1  backup_db.ps1  check_data_health.ps1  start_collector.ps1
sql/: init.sql
src/baccarat/: __init__.py  app.py
src/baccarat/core/: __init__.py  config.py  exceptions.py  logger.py  trace.py  types.py
src/baccarat/execution/: __init__.py  base.py  gas_oracle.py  polymarket_executor.py  position_manager.py  receipt_watcher.py  tx_builder.py  tx_submitter.py  wallet.py
src/baccarat/ingestion/: __init__.py
src/baccarat/ingestion/chain/: __init__.py  base.py  event_decoder.py  polygon_listener.py  rpc_pool.py
src/baccarat/ingestion/market/: __init__.py  base.py  polymarket_ws.py
src/baccarat/monitoring/: __init__.py  metrics.py  telegram.py
src/baccarat/risk/: __init__.py  limits.py  manager.py
src/baccarat/storage/: __init__.py  models.py  postgres.py  redis_client.py
src/baccarat/strategy/: __init__.py  address_pool.py  arbitrage.py  base.py  copy_trade.py
src/yield_lag_bot/: __init__.py  app.py  config.py
src/yield_lag_bot/dashboard/: __init__.py  app.py
src/yield_lag_bot/execution/: __init__.py  cme_executor_stub.py  crypto_executor_stub.py  paper_executor.py
src/yield_lag_bot/jobs/: __init__.py  analyze_event_results.py  analyze_research_features.py  build_research_feature_panel.py  collect_market_data.py  download_cme_databento.py  evaluate_paper_signal_gate.py  export_ticks.py  replay_market_data.py  run_conditional_feature_replay.py  run_event_batch.py  run_experiment.py  run_lead_lag_study.py  run_paper_signal_replay.py  run_paper_signal_sweep.py  run_paper_trading.py  run_research.py
src/yield_lag_bot/models/: __init__.py  market_event.py
src/yield_lag_bot/research/: __init__.py  event_study.py  fee_slippage_model.py  latency_report.py  lead_lag_analyzer.py
src/yield_lag_bot/risk/: __init__.py  kill_switch.py  risk_manager.py  stale_data_guard.py
src/yield_lag_bot/strategy/: __init__.py  curve_signal.py  macro_event_signal.py  signal_router.py  treasury_shock_signal.py
tests/unit/: test_smoke.py  test_trace_logging.py
tests/unit/yield_lag_bot/: test_analyze_event_results.py  test_analyze_research_features.py  test_archive_hyperliquid_bbo.py  test_build_research_feature_panel.py  test_download_cme_databento.py  test_download_hyperliquid_candles.py  test_evaluate_paper_signal_gate.py  test_export_and_cme_csv.py  test_hyperliquid_adapter.py  test_latency_and_safety.py  test_lead_lag_analyzer.py  test_normalizer.py  test_run_conditional_feature_replay.py  test_run_event_batch.py  test_run_event_study.py  test_run_experiment.py  test_run_lead_lag_study.py  test_run_paper_signal_replay.py  test_run_paper_signal_sweep.py
