[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "baccarat"
version = "0.1.0"
description = "Polymarket automated trading bot — copy-trading & merge-redeem arbitrage on Polygon"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "baccarat" }]

dependencies = [
    # async core
    "uvloop>=0.19.0; sys_platform != 'win32'",
    # config
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2",
    "PyYAML>=6.0.1",
    # logging
    "structlog>=24.1",
    "orjson>=3.9",
    # storage
    "SQLAlchemy[asyncio]>=2.0.29",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "redis[hiredis]>=5.0.3",
    # web3 / chain
    "web3>=6.15",
    "eth-account>=0.11",
    "eth-abi>=5.0",
    # network
    "aiohttp>=3.9",
    "websockets>=12.0",
    "tenacity>=8.2",
    # telegram
    "aiogram>=3.4",
    # numerics — Polymarket prices/sizes use Decimal exclusively, never float
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.9",
    "types-PyYAML",
    "freezegun>=1.4",
]

[project.scripts]
baccarat = "baccarat.app:run"

[tool.hatch.build.targets.wheel]
packages = ["src/baccarat"]

# ---------------------------------------------------------------------------
# Ruff: lint + format
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "UP",            # pyupgrade
    "B",             # bugbear
    "ASYNC",         # async best-practices
    "SIM",           # simplify
    "RUF",           # ruff-specific
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "SIM"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: requires external services (postgres, redis, RPC)",
    "slow: long-running tests",
]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["migrations/", "build/", "dist/"]

[[tool.mypy.overrides]]
module = ["web3.*", "eth_account.*", "eth_abi.*"]
ignore_missing_imports = true
