[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "yield-lag-bot"
version = "0.1.0"
description = "Project YIELD-LAG: CME Treasury futures and crypto perpetual lead-lag research"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "yield-lag-bot" }]

dependencies = [
    "uvloop>=0.19.0; sys_platform != 'win32'",
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2",
    "PyYAML>=6.0.1",
    "structlog>=24.1",
    "orjson>=3.9",
    "SQLAlchemy[asyncio]>=2.0.29",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "redis[hiredis]>=5.0.3",
    "web3>=6.15",
    "eth-account>=0.11",
    "eth-abi>=5.0",
    "aiohttp>=3.9",
    "websockets>=12.0",
    "tenacity>=8.2",
    "pandas>=2.0",
    "aiogram>=3.4",
]

[project.optional-dependencies]
databento = [
    "databento",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.9",
    "types-PyYAML",
    "freezegun>=1.4",
]

[project.scripts]
yield-lag-bot = "yield_lag_bot.app:run"
baccarat = "baccarat.app:run"

[tool.hatch.build.targets.wheel]
packages = ["src/yield_lag_bot", "src/baccarat"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
    "B",
    "ASYNC",
    "SIM",
    "RUF",
]
ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: requires external services (postgres, redis, RPC)",
    "slow: long-running tests",
]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["migrations/", "build/", "dist/"]

[[tool.mypy.overrides]]
module = ["web3.*", "eth_account.*", "eth_abi.*"]
ignore_missing_imports = true
